# simscript

./: Cargo.toml  README.md  shell.nix
.github/cargo-setup/: action.yml
.github/workflows/: tests.yml
assets/: arrow.glb
physics/: Cargo.toml
physics/src/: components.rs  force.rs  inertia.rs  lib.rs  vector_arrows.rs
physics/src/components/: acceleration.rs  force.rs  inertia.rs  mod.rs  velocity.rs
src/: camera.rs  keybinds.rs  main.rs
src/sim/: mod.rs  simulation.rs
ui/: Cargo.toml
ui/src/: camera.rs  keybinds.rs  lib.rs
