[package]
name = "simscript"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "ui", "physics" ]


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1


# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"


[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
bevy_infinite_grid = "0.13.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] } # Remove trace logging at compile time
physics = { path = "./physics/" }
ui = { path = "./ui/" }
